<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>
		4.0.0
	</modelVersion>
	<parent>
		<groupId>
			org.springframework.boot
		</groupId>
		<artifactId>
			spring-boot-starter-parent
		</artifactId>
		<version>
			3.4.4
		</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>
		ma.ensa
	</groupId>
	<artifactId>
		InternHub-Back-End
	</artifactId>
	<version>
		0.0.1-SNAPSHOT
	</version>
	<name>
		pfaProject
	</name>
	<description>
		pfaProject
	</description>
	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
		<java.version>
			17
		</java.version>
		<org.mapstruct.version>
			1.6.3
		</org.mapstruct.version>
		<lombok.version>
			1.18.36
		</lombok.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-devtools
			</artifactId>
			<scope>
				runtime
			</scope>
			<optional>
				true
			</optional>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-data-jpa
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-validation
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-web
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				com.h2database
			</groupId>
			<artifactId>
				h2
			</artifactId>
			<scope>
				test
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.postgresql
			</groupId>
			<artifactId>
				postgresql
			</artifactId>
			<scope>
				runtime
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-security
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				io.jsonwebtoken
			</groupId>
			<artifactId>
				jjwt-api
			</artifactId>
			<version>
				0.11.5
			</version>
		</dependency>
		<dependency>
			<groupId>
				io.jsonwebtoken
			</groupId>
			<artifactId>
				jjwt-impl
			</artifactId>
			<version>
				0.11.5
			</version>
			<scope>
				runtime
			</scope>
		</dependency>
		<dependency>
			<groupId>
				io.jsonwebtoken
			</groupId>
			<artifactId>
				jjwt-jackson
			</artifactId>
			<version>
				0.11.5
			</version>
			<scope>
				runtime
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.projectlombok
			</groupId>
			<artifactId>
				lombok
			</artifactId>
			<version>
				${lombok.version}
			</version>
			<optional>
				true
			</optional>
		</dependency>
		<dependency>
			<groupId>
				org.mapstruct
			</groupId>
			<artifactId>
				mapstruct
			</artifactId>
			<version>
				${org.mapstruct.version}
			</version>
		</dependency>
		<dependency>
			<groupId>
				org.springdoc
			</groupId>
			<artifactId>
				springdoc-openapi-starter-webmvc-ui
			</artifactId>
			<version>
				2.8.6
			</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-test
			</artifactId>
			<scope>
				test
			</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>
					org.apache.maven.plugins
				</groupId>
				<artifactId>
					maven-compiler-plugin
				</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>
								org.projectlombok
							</groupId>
							<artifactId>
								lombok
							</artifactId>
							<version>
								${lombok.version}
							</version>
						</path>
						<path>
							<groupId>
								org.mapstruct
							</groupId>
							<artifactId>
								mapstruct-processor
							</artifactId>
							<version>
								${org.mapstruct.version}
							</version>
						</path>
						<path>
							<groupId>
								org.projectlombok
							</groupId>
							<artifactId>
								lombok-mapstruct-binding
							</artifactId>
							<version>
								0.2.0
							</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>
					org.springframework.boot
				</groupId>
				<artifactId>
					spring-boot-maven-plugin
				</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>
								org.projectlombok
							</groupId>
							<artifactId>
								lombok
							</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
